--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div class="grid"></div>
-    <script src="./index.js"></script>
+    <script type="module" src="./dist/index.js"></script>
   </body>
 </html>
